welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:5: error: not found: value len
  val taille=len(nums)
             ^