welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
  var i:Int=0
  var trouve=false
  
  val taille=len(nums)
  
  while ((i<taille)&&(!trouve)){
    if (nums(i)==lookingFor){
      trouve=true
    }
    else{
      i+=1
    }
  }
  
  if (trouve){
    return i
  }
  else{
    return -1
  }
}